descriptive commit message

--- a/questions/1.md
+++ b/questions/1.md
@@ -263,14 +263,14 @@ const d = undefined;
 > - [Условное ветвление: if, '?'](https://learn.javascript.ru/ifelse)
 #### Дайте ответ на вопрос или выполните задание
 ```
-Есть переменные 'a', 'b', 'c', 'd', которые могут быть null, undefifided или string
+Есть переменные 'a', 'b', 'c', 'd', которые могут быть null, undefined или string
 Создайте переменную 'message', в которую будет записываться значение по условию:
 Если 'a' не пустая строка - записать значение в message,
 иначе если 'b' не пустая строка - записать значение в message,
 иначе если 'c' не пустая строка - записать значение в message,
 иначе если 'd' не пустая строка - записать значение в message
 
-Если все переменные 'a', 'b', 'c', 'd' будут null, undefifided или пустые строки, message должен быть 'null'
+Если все переменные 'a', 'b', 'c', 'd' будут null, undefined или пустые строки, message должен быть 'null'
 ```
 ```js
 const a = null;
