descriptive commit message

--- a/answers/1.md
+++ b/answers/1.md
@@ -1,32 +1,28 @@
 ##Задача/Вопрос 20
 
 ```js
-let massage;
 const a = null;
 const b = '';
 const c = 'test';
 const d = undefined;
 
-massage = a == "" ? massage = "":
-b != "" ? massage = "null":
-c != "" ? massage = "3":
-d != "" ? massage = null:
+let massage 
+
 console.log(massage);
 ```
 
 ##Задача/Вопрос 21
 
 ```js
-let massage;
 const a = null;
 const b = '';
 const c = 'test';
 const d = undefined;
 
-massage = a == "" ? massage = "null":
-b == "" ? massage = "null":
-c == "" ? massage = "null":
-d == "" ? massage = "null":
+let massage = a === "" ? "one" : null
+    b === "" ? "null" : null
+        c === "" ? "three" :
+            d === "" ? "four" : null
 
 console.log(massage);
 ```
