descriptive commit message

--- a/answers/1.md
+++ b/answers/1.md
@@ -1,4 +1,4 @@
-##Задача/Вопрос 20
+##Задача 20
 ###
 ```js
 const a = null;
@@ -11,7 +11,7 @@ let massage
 console.log(massage);
 ```
 
-##Задача/Вопрос 21
+##Задача 21
 ###
 ```js
 const a = null;
@@ -25,4 +25,15 @@ let massage = a === "" ? "one" : null
             d === "" ? "four" : null
 
 console.log(massage);
+```
+##Задача 22
+###
+```js
+let transport = 'machine';
+
+transport = 'car' > 'car' ? 'car' :
+    'motorcycle' > 'motorcycle' ? 'motorcycle' :
+        'bicycle' > 'motorcycle' ? 'motorcycle' : 'something other'
+
+console.log(transport);
 ```
