--- a/answers/1.md
+++ b/answers/1.md
@@ -6,9 +6,13 @@ const b = '';
 const c = 'test';
 const d = undefined;
 
-let massage 
+let message
+if (d) {message = d;}
+if (c) {message = c;}
+if (b) {message = b;}
+if (a) {message = a;}
 
-console.log(massage);
+console.log(message);
 ```
 
 ##Задача 21
@@ -19,13 +23,82 @@ const b = '';
 const c = 'test';
 const d = undefined;
 
-let massage = a === "" ? "one" : null
-    b === "" ? "null" : null
-        c === "" ? "three" :
-            d === "" ? "four" : null
+let message = (a !== "") ? a:
+    (b !== "") ? b:
+        (c !== "") ? c:
+            (d !== "")  ? d:  null;
 
-console.log(massage);
+console.log(message);
 ```
 ##Задача 22
 ###
+```js
+let transport = prompt('What kind of transport do you use?');
+
+if (transport == 'car') {
+transport = 'car';
+}
+else if (transport == 'motorcycle') {
+transport = 'motorcycle';
+}
+else if (transport == 'bycicle') {
+transport = 'bycicle';
+}
+else (transport = 'something other' );
+console.log(transport);
+```
+##Задача 23
+###
+```js
+let value = 'some string';
+if(value) {
+    console.log('message')
+}
+```
+##Задача 24
+###
+```js
+let value = 'some string';
+if(!value) {
+   console.log('message')
+}
+```
+##Задача 24
+###
+```js
+let transport = prompt('What is your car?');
+
+if (transport == 'bicycle' || transport == 'motorcycle') {
+    transport = '2 wheels'
+}
+if (transport == 'car') {
+    transport = '4 wheels';
+}
+console.log(transport);
+
+// Короче
+let message = prompt('What is your car?');
+
+let transport = (message == 'bicycle' || message == 'motorcycle') ? '2 wheels' :
+                (message == 'car') ? '4 wheels' : '';
+console.log(transport);
+```
+##Задача 24
+###
+```js
+const letter = 'g';
+if (letter >= 'a' || letter <= 'z' || letter >= 'A' || letter <= 'Z') {
+    console.log(`${letter} is a letter of the English alphabet`);
+}
+```
+
+
+
+
+
+
+
+
+
+
 
