--- a/answers/1.md
+++ b/answers/1.md
@@ -63,39 +63,92 @@ if(!value) {
    console.log('message')
 }
 ```
-##Задача 24
+##Задача 25
 ###
 ```js
 let transport = prompt('What is your car?');
 
 if (transport == 'bicycle' || transport == 'motorcycle') {
-    transport = '2 wheels'
+    transport = '2 wheels';
 }
 if (transport == 'car') {
     transport = '4 wheels';
 }
 console.log(transport);
 
-// Короче
+//
 let message = prompt('What is your car?');
 
 let transport = (message == 'bicycle' || message == 'motorcycle') ? '2 wheels' :
                 (message == 'car') ? '4 wheels' : '';
 console.log(transport);
 ```
-##Задача 24
+##Задача 26
 ###
+```
+Напишите условие if для проверки, что значение переменной `letter` это буква английского алфавита
+```
 ```js
 const letter = 'g';
 if (letter >= 'a' || letter <= 'z' || letter >= 'A' || letter <= 'Z') {
     console.log(`${letter} is a letter of the English alphabet`);
 }
 ```
+##Задача 27
+```
+1. Напишите условие if для проверки, что значение переменной `num` не 3, 7, 8, 9, 22, 23, 24, 25
+2. Число не должно быть больше 100
+3. Число не должно быть меньше 1 включительно
+4. Проверьте, что значение переменной `num` это число
+5. Есть исключение, если это число 105, оно также должно быть включено
+```
+```js
+const num = 22;
+if ((num != 3 && num != 7 && num != 8 && num != 9 && num != 22 && num != 23 && num != 24 && num != 25) && (num <= 0 && num > 100) && (typeof num == 'number') && (num == 105)) {
+    console.log(num);
+}
+```
+##Задача 28
+```
+Есть переменные 'a', 'b', 'c', 'd', которые могут быть null, undefifided или string
+Содайте переменную 'message', в которую будет записываться значение по условию:
+Если 'a' не пустая строка - записать значение в message,
+иначе если 'b' не пустая строка - записать значение в message,
+иначе если 'c' не пустая строка - записать значение в message,
+иначе если 'd' не пустая строка - записать значение в message
 
+Если все переменные 'a', 'b', 'c', 'd' будут null, undefifided или пустые строки,
+message должен быть 'null'
+```
+```js
+const a = null;
+const b = '';
+const c = 'test';
+const d = undefined;
 
+let message = (d !== "" && d !== null && d !== undefined) ? d:
+    (c !== "" && c !== null && c !== undefined) ? c:
+        (b !== "" && b !== null && b !== undefined) ? b:
+            (a !== "" && a !== null && a !== undefined)  ? a:  null;
 
+console.log(message);
+```
+##Задача 29
+```
+Для решения задачи используйте логические операторы || и &&
 
+Переменные 'firstMessage', 'secondMessage' могут быть null, undefifided или string
 
+1. Создайте переменную 'message'.
+2. Если 'firstMessage' и 'secondMessage' не пустые строки, объедените их,
+   для разделителя строк используйте пробел.
+3. Запишите объедененную строку в 'message'
+4. Если 'firstMessage' или 'secondMessage' будет null, undefifided, пустая строка,
+   message должен быть равен 'default message'
+```
+```js
+
+```
 
 
 
