--- a/answers/1.md
+++ b/answers/1.md
@@ -90,7 +90,7 @@ console.log(transport);
 ```
 ```js
 const letter = 'g';
-if (letter >= 'a' || letter <= 'z' || letter >= 'A' || letter <= 'Z') {
+if (letter >= 'a' && letter <= 'z' || letter >= 'A' && letter <= 'Z') {
     console.log(`${letter} is a letter of the English alphabet`);
 }
 ```
@@ -147,11 +147,85 @@ console.log(message);
    message должен быть равен 'default message'
 ```
 ```js
-
+const firstMessage = 'first';
+const secondMessage = 'second';
+const message = firstMessage && secondMessage && `${firstMessage} ${secondMessage}` || 'default message'
+console.log(message);
 ```
+##Задача 30
+```
+В чем различие между операторами '??' и '||'?
+```
+```
+Оператор '||' возвращает первое истинное значение
+Оператор '??' возвращает первое определённое значение
+```
+##Задача 31
+```
+Есть переменные 'a', 'b', 'c', 'd', которые могут быть null, undefifided или string
+Создайте переменную 'message', в которую будет записываться значение по условию:
+Если 'a' строка - записать значение в message,
+иначе если 'b' строка - записать значение в message,
+иначе если 'c' строка - записать значение в message,
+иначе если 'd' строка - записать значение в message
 
+все переменные будут null или undefifided, message должен быть 'null'
+```
+```js
+const a = null;
+const b = '';
+const c = 'test';
+const d = undefined;
 
-
-
-
-
+const message = a ?? b ?? c ?? d ?? null;
+console.log(message)
+```
+##Задача 32
+```
+В чем различие между while и do...while?
+```
+```
+while проверяет условие до каждой интерации, а do...while после каждой. 
+```
+##Задача 33
+```
+Цикл должен начинаться с 0 и заканиваться на 100
+Для выполнения задачи можно использовать только 1 'if' внутри тела цикла
+Для вывода числа использовать console.log()
+```
+#### Дайте ответ на вопрос или выполните задание
+```
+С помощью while выведите числа от 5 до 50 и от 70 до 80 в одном цикле
+```
+```js
+let num = 0;
+while(num < 100) {
+    if (num >= 5 && num <= 50 || num >= 70 && num <= 80) {
+        console.log(num) ;
+    }
+    ++num;
+    }
+```
+##Задача 34
+```
+Для выполнения задачи можно использовать только 1 'if' внутри тела цикла
+```
+```
+С помощью while cделайте бесконечный цикл, который будет останавливаться на 100 итерации
+```
+```js
+let num = 0;
+while(num < 100) {
+    console.log(num) ;
+    ++num;
+    }
+```
+##Задание 35
+```
+Цикл должен начинаться с 0 и заканчиваться на 100
+Для выполнения задачи можно использовать только 1 'if' внутри тела цикла
+Для вывода числа использовать console.log()
+```
+```
+С помощью for выведите числа от 5 до 50 и от 70 до 80 в одном цикле
+```
