--- a/answers/1.md
+++ b/answers/1.md
@@ -200,11 +200,12 @@ while проверяет условие до каждой интерации, а
 ```js
 let num = 0;
 while(num < 100) {
-    if (num >= 5 && num <= 50 || num >= 70 && num <= 80) {
+    if (num >= 5 && num <= 50 || num >= 70 && num <= 80)
+    {
         console.log(num) ;
     }
     ++num;
-    }
+    }  //
 ```
 ##Задача 34
 ```
@@ -216,7 +217,7 @@ while(num < 100) {
 ```js
 let num = 0;
 while(num < 100) {
-    console.log(num) ;
+    console.log(num);
     ++num;
     }
 ```
@@ -228,4 +229,74 @@ while(num < 100) {
 ```
 ```
 С помощью for выведите числа от 5 до 50 и от 70 до 80 в одном цикле
+```
+```js
+for (let num = 0; num < 100; num++) {
+    if (num >= 5 && num<= 50 || num >= 70 && num <= 80)
+    {
+        console.log(num)
+    }
+}
+```
+##Задание 36
+```
+Для выполнения задачи можно использовать только 1 'if' внутри тела цикла
+```
+```
+С помощью for cделайте бесконечный цикл, который будет останавливаться на 100 итерации
+```
+```js
+for (num = 0; num <= 100; num++) console.log(num);
+```
+##Задание 37
+```
+Есть переменная 'number' с произвольным числом от 100 до 1000
+Выведите в консоль ближайшее число, на которое делится 'number' без остатка, используя while
+```
+```js
+let num = 100;
+while (num < 1000) {
+    if (num % 3 == 0) {
+        console.log(num);
+        break;
+    }
+        num++
+    }
+```
+## Задача 38
+```
+Для решения задачи используйте switch
+Для вывода сообщения используйте console.log
+```
+```
+Если переменная transport равна 'bicycle' или 'motorcycle' - вывести '2 wheels'
+Если переменная transport равна 'car'- вывести '4 wheels'
+Если переменная transport не равна 'bicycle', 'motorcycle' или 'car' - вывести '0 wheels'
+```
+```js
+let transport = 'bicycle';
+switch (transport) {
+    case 'bicycle':
+    case 'motorcycle':
+        console.log('2 wheels');
+        break;
+    
+    case 'car':
+        console.log('4 wheels')
+        break;
+        
+    default:
+        console.log('0 wheels')
+}
+```
+## Задача 39
+```
+Функция принимает 2 аргумента
+j - число
+k - число
+Возвращает число, которое равно j в степени k
+```
+```js
+function someFunction (j, k) {
+}
 ```
