--- a/answers/1.md
+++ b/answers/1.md
@@ -282,21 +282,45 @@ switch (transport) {
         break;
     
     case 'car':
-        console.log('4 wheels')
+        console.log('4 wheels');
         break;
         
     default:
-        console.log('0 wheels')
+        console.log('0 wheels');
 }
 ```
-## Задача 39
+##Задача 39
 ```
 Функция принимает 2 аргумента
 j - число
 k - число
 Возвращает число, которое равно j в степени k
 ```
+```
+1. Скопируйте пример кода в ваш ответ.
+2. Переименуйте функцию.
+3. Переименуйте аргументы.
+4. Сделайте комментарий к функции
+```
 ```js
-function someFunction (j, k) {
+
+function calcSum (numOne, numTwo) {
+    return numOne ** numTwo; // Возвращает число, которое равно numOne в степени numTwo
 }
+let result = calcSum(7, 12);
+console.log(result);
+```
+##Задача 40
+```js
+function someFunction (arg = '') {
+  if(!arg) {
+    return;
+  }
+  console.log('Hello World');
+}
+```
+#### Дайте ответ на вопрос или выполните задание
+```
+Функция принимает 1 агрумент с типами null, undefined, string
+Напишите все варианты вызова функции, при которых 'Hello World' не будет выводиться
 ```
