--- a/answers/1.md
+++ b/answers/1.md
@@ -1,4 +1,4 @@
-##Задача 20
+## Задача 20
 ###
 ```js
 const a = null;
@@ -15,7 +15,7 @@ if (a) {message = a;}
 console.log(message);
 ```
 
-##Задача 21
+## Задача 21
 ###
 ```js
 const a = null;
@@ -30,7 +30,7 @@ let message = (a !== "") ? a:
 
 console.log(message);
 ```
-##Задача 22
+## Задача 22
 ###
 ```js
 let transport = prompt('What kind of transport do you use?');
@@ -47,7 +47,7 @@ transport = 'bycicle';
 else (transport = 'something other' );
 console.log(transport);
 ```
-##Задача 23
+## Задача 23
 ###
 ```js
 let value = 'some string';
@@ -55,7 +55,7 @@ if(value) {
     console.log('message')
 }
 ```
-##Задача 24
+## Задача 24
 ###
 ```js
 let value = 'some string';
@@ -63,7 +63,7 @@ if(!value) {
    console.log('message')
 }
 ```
-##Задача 25
+## Задача 25
 ###
 ```js
 let transport = prompt('What is your car?');
@@ -83,7 +83,7 @@ let transport = (message == 'bicycle' || message == 'motorcycle') ? '2 wheels' :
                 (message == 'car') ? '4 wheels' : '';
 console.log(transport);
 ```
-##Задача 26
+## Задача 26
 ###
 ```
 Напишите условие if для проверки, что значение переменной `letter` это буква английского алфавита
@@ -94,7 +94,7 @@ if (letter >= 'a' && letter <= 'z' || letter >= 'A' && letter <= 'Z') {
     console.log(`${letter} is a letter of the English alphabet`);
 }
 ```
-##Задача 27
+## Задача 27
 ```
 1. Напишите условие if для проверки, что значение переменной `num` не 3, 7, 8, 9, 22, 23, 24, 25
 2. Число не должно быть больше 100
@@ -108,7 +108,7 @@ if ((num != 3 && num != 7 && num != 8 && num != 9 && num != 22 && num != 23 && n
     console.log(num);
 }
 ```
-##Задача 28
+## Задача 28
 ```
 Есть переменные 'a', 'b', 'c', 'd', которые могут быть null, undefifided или string
 Содайте переменную 'message', в которую будет записываться значение по условию:
@@ -133,7 +133,7 @@ let message = (d !== "" && d !== null && d !== undefined) ? d:
 
 console.log(message);
 ```
-##Задача 29
+## Задача 29
 ```
 Для решения задачи используйте логические операторы || и &&
 
@@ -152,7 +152,7 @@ const secondMessage = 'second';
 const message = firstMessage && secondMessage && `${firstMessage} ${secondMessage}` || 'default message'
 console.log(message);
 ```
-##Задача 30
+## Задача 30
 ```
 В чем различие между операторами '??' и '||'?
 ```
@@ -160,7 +160,7 @@ console.log(message);
 Оператор '||' возвращает первое истинное значение
 Оператор '??' возвращает первое определённое значение
 ```
-##Задача 31
+## Задача 31
 ```
 Есть переменные 'a', 'b', 'c', 'd', которые могут быть null, undefifided или string
 Создайте переменную 'message', в которую будет записываться значение по условию:
@@ -180,14 +180,14 @@ const d = undefined;
 const message = a ?? b ?? c ?? d ?? null;
 console.log(message)
 ```
-##Задача 32
+## Задача 32
 ```
 В чем различие между while и do...while?
 ```
 ```
 while проверяет условие до каждой интерации, а do...while после каждой. 
 ```
-##Задача 33
+## Задача 33
 ```
 Цикл должен начинаться с 0 и заканиваться на 100
 Для выполнения задачи можно использовать только 1 'if' внутри тела цикла
@@ -207,7 +207,7 @@ while(num < 100) {
     ++num;
     }  //
 ```
-##Задача 34
+## Задача 34
 ```
 Для выполнения задачи можно использовать только 1 'if' внутри тела цикла
 ```
@@ -221,7 +221,7 @@ while(num < 100) {
     ++num;
     }
 ```
-##Задание 35
+## Задание 35
 ```
 Цикл должен начинаться с 0 и заканчиваться на 100
 Для выполнения задачи можно использовать только 1 'if' внутри тела цикла
@@ -238,7 +238,7 @@ for (let num = 0; num < 100; num++) {
     }
 }
 ```
-##Задание 36
+## Задание 36
 ```
 Для выполнения задачи можно использовать только 1 'if' внутри тела цикла
 ```
@@ -248,7 +248,7 @@ for (let num = 0; num < 100; num++) {
 ```js
 for (num = 0; num <= 100; num++) console.log(num);
 ```
-##Задание 37
+## Задание 37
 ```
 Есть переменная 'number' с произвольным числом от 100 до 1000
 Выведите в консоль ближайшее число, на которое делится 'number' без остатка, используя while
@@ -289,7 +289,7 @@ switch (transport) {
         console.log('0 wheels');
 }
 ```
-##Задача 39
+## Задача 39
 ```
 Функция принимает 2 аргумента
 j - число
@@ -310,7 +310,8 @@ function calcSum (numOne, numTwo) {
 let result = calcSum(7, 12);
 console.log(result);
 ```
-##Задача 40
+## Задача 40
+### Пример кода
 ```js
 function someFunction (arg = '') {
   if(!arg) {
@@ -323,4 +324,12 @@ function someFunction (arg = '') {
 ```
 Функция принимает 1 агрумент с типами null, undefined, string
 Напишите все варианты вызова функции, при которых 'Hello World' не будет выводиться
+```
+```js
+function someFunction (arg = '') {
+  if(!arg) {
+    return;
+  }
+  console.log('Hello World');
+}
 ```
