--- a/answers/1.md
+++ b/answers/1.md
@@ -311,25 +311,16 @@ let result = calcSum(7, 12);
 console.log(result);
 ```
 ## Задача 40
-### Пример кода
-```js
-function someFunction (arg = '') {
-  if(!arg) {
-    return;
-  }
-  console.log('Hello World');
-}
-```
-#### Дайте ответ на вопрос или выполните задание
 ```
 Функция принимает 1 агрумент с типами null, undefined, string
 Напишите все варианты вызова функции, при которых 'Hello World' не будет выводиться
 ```
 ```js
 function someFunction (arg = '') {
-  if(!arg) {
-    return;
-  }
-  console.log('Hello World');
+    if(!arg || arg == '' || arg == null || arg == undefined || arg == 0 || arg == false) {
+        return;
+    }
+    console.log('Hello World');
 }
+someFunction()
 ```
