--- a/answers/1.md
+++ b/answers/1.md
@@ -104,7 +104,16 @@ if (letter >= 'a' && letter <= 'z' || letter >= 'A' && letter <= 'Z') {
 ```
 ```js
 const num = 22;
-if ((num != 3 && num != 7 && num != 8 && num != 9 && num != 22 && num != 23 && num != 24 && num != 25) && (num <= 0 && num > 100) && (typeof num == 'number') && (num == 105)) {
+if (
+    (
+        num !== 3 &&
+        (num => 7 && num <= 9)
+        (num => 22 && num <= 25)
+    ) &&
+    (num <= 0 && num > 100) && 
+    (typeof num === 'number') && 
+    (num === 105)
+) {
     console.log(num);
 }
 ```
@@ -149,7 +158,7 @@ console.log(message);
 ```js
 const firstMessage = 'first';
 const secondMessage = 'second';
-const message = firstMessage && secondMessage && `${firstMessage} ${secondMessage}` || 'default message'
+const message = firstMessage && secondMessage && `${firstMessage} ${secondMessage}` || 'default message';
 console.log(message);
 ```
 ## Задача 30
@@ -316,11 +325,174 @@ console.log(result);
 Напишите все варианты вызова функции, при которых 'Hello World' не будет выводиться
 ```
 ```js
-function someFunction (arg = '') {
-    if(!arg || arg == '' || arg == null || arg == undefined || arg == 0 || arg == false) {
+someFunction()
+someFunction('')
+someFunction(null)
+someFunction(underfined)
+```
+## Задача 41
+```
+Напишите функцию, которая будет получать 1 аргумент с типом 'number'
+Возвращать false если это четное число и true - если не четное
+```
+```js
+
+function calcSum(num) {
+    if (num % 2 === 0) {
+        return false;
+    } else if (num % 3 === 0) {
+        return true;
+    } else {
+        return true;
+    }
+}
+const num = 10;
+calcSum(num);
+```
+### или
+```js
+function calcSum(num) {
+    return (num % 3 === 0 || num === false || true)
+}
+const num = 10;
+calcSum(num);
+```
+## Задача 42
+```
+У вас есть функция, которая принимает 1 аргумент с типом number
+Количество елементов, которое может вернуть функция - не определено, сейчас это 7 елементов, но может быть и намного большее количество.
+Например:
+Передав число 3 вы получите 3 елемента
+Передав число 100 вы получите 7 елементов, потому что на данный момент это максиммальное количесвтво елементов
+```
+#### Дайте ответ на вопрос или выполните задание
+```
+Вызовите функцию getElements, передав в нее аргумент, который позволит получать максимальное количество елементов
+```
+```js
+function getElements(count) {
+  return [ 1 / 0 ].slice(0, count)
+}
+getElements(count);
+
+```
+## Задача 43
+```
+1. Напишите функцию, которая будет принимать 2 аргумента с типом number
+2. В теле функции должно выполняться деление 1го аргумента на 2й и возвращаться результат
+3. Если деление невозможно (например 0 деленный на 0), возвращать 0
+```
+```js
+function getSum(year, month) {
+    return (message = year / month || 0);
+}
+getSum(2022, 12);
+```
+```js
+
+function getSum(year, month) {
+    if (message = year / month) {
+        return message;
+    } else
+        return 0;
+    }
+
+getSum(2022, 12);
+```
+## Задача 44
+```
+1. Напишите функцию, которая должна принимать любой тип данних
+2. Если тип Number или BigInt - возвращать сроку "number"
+3. Если тип Boolean - возвращать строку "true" или "false"
+4. Если тип String - возвращать сроку "string"
+5. Если тип null - возвращать сроку "null"
+6. Для всего остального - возвращать строку "else"
+```
+```js
+function dataType() {
+    let num = BigInt;
+    switch (num) {
+        case Number:
+        case BigInt:
+            return 'number';
+            break;
+
+        case Boolean:
+            return ;
+            break;
+
+        case String:
+            return 'string';
+            break;
+
+        case null:
+            return 'null';
+            break;
+
+        default:
+            return 'else';
+            break;
+    }
+}
+dataType();
+```
+## Задача 45
+```js
+let someFunction = function(arg = '') {
+    if (!arg) {
         return;
     }
-    console.log('Hello World');
-}
-someFunction()
+    console.log('hi')
+};
+someFunction();
 ```
+## Задача 46
+```js
+let someFunction = (arg = '') => {
+    if (!arg) {
+        return;
+    }
+    console.log('hi')
+};
+someFunction();
+```
+## Задача 47
+```js
+let isPositiveNumber = (num) => {
+    if (num > 0) {
+        return true;
+    } else {
+        return false;
+    }
+}
+isPositiveNumber()
+```
+```js
+let num;
+let isPositiveNumber = num > 0 ?
+    () => console.log(true):
+    () => console.log(false);
+isPositiveNumber();
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
