--- a/answers/1.md
+++ b/answers/1.md
@@ -410,7 +410,7 @@ getSum(2022, 12);
 ```
 ```js
 function dataType() {
-    let num = BigInt;
+    let num = '';
     switch (num) {
         case Number:
         case BigInt:
@@ -418,7 +418,7 @@ function dataType() {
             break;
 
         case Boolean:
-            return ;
+            return num;
             break;
 
         case String:
