--- a/answers/1.md
+++ b/answers/1.md
@@ -409,7 +409,7 @@ getSum(2022, 12);
 6. Для всего остального - возвращать строку "else"
 ```
 ```js
-function dataType() {
+function getType() {
     let num = '';
     switch (num) {
         case Number:
