--- a/answers/1.md
+++ b/answers/1.md
@@ -328,7 +328,8 @@ console.log(result);
 someFunction()
 someFunction('')
 someFunction(null)
-someFunction(underfined)
+someFunction(NaN)
+someFunction(undefined)
 ```
 ## Задача 41
 ```
@@ -410,7 +411,7 @@ getSum(2022, 12);
 ```
 ```js
 function getType() {
-    let num = '';
+    let num = Number;
     switch (num) {
         case Number:
         case BigInt:
