--- a/answers/1.md
+++ b/answers/1.md
@@ -423,7 +423,7 @@ function getType() {
             break;
 
         case String:
-            return 'string';
+            return (typeof 'string');
             break;
 
         case null:
@@ -435,7 +435,7 @@ function getType() {
             break;
     }
 }
-dataType();
+getType();
 ```
 ## Задача 45
 ```js
