--- a/answers/1.md
+++ b/answers/1.md
@@ -423,7 +423,7 @@ function getType() {
             break;
 
         case String:
-            return (typeof 'string');
+            return 'string';
             break;
 
         case null:
