--- a/answers/1.md
+++ b/answers/1.md
@@ -337,6 +337,7 @@ someFunction(undefined)
 Возвращать false если это четное число и true - если не четное
 ```
 ```js
+/* 
 
 function calcSum(num) {
     if (num % 2 === 0) {
@@ -349,14 +350,24 @@ function calcSum(num) {
 }
 const num = 10;
 calcSum(num);
+
+ */
 ```
-### или
 ```js
-function calcSum(num) {
-    return (num % 3 === 0 || num === false || true)
+function getData(num) {
+    if (num % 2) {
+        return;
+    }
 }
 const num = 10;
 calcSum(num);
+
+/ Или
+
+function getData(num) { return num % 2 };
+const num = 10;
+calcSum(num);
+
 ```
 ## Задача 42
 ```
@@ -371,11 +382,19 @@ calcSum(num);
 Вызовите функцию getElements, передав в нее аргумент, который позволит получать максимальное количество елементов
 ```
 ```js
+/* Было
+
 function getElements(count) {
   return [ 1 / 0 ].slice(0, count)
 }
 getElements(count);
 
+ */
+```
+```js
+function getElements(count) {
+  return [1,2,3,4,5,6,7].slice(0, count)
+}
 ```
 ## Задача 43
 ```
@@ -459,6 +478,8 @@ someFunction();
 ```
 ## Задача 47
 ```js
+/* Прошлы вариант
+
 let isPositiveNumber = (num) => {
     if (num > 0) {
         return true;
@@ -467,15 +488,13 @@ let isPositiveNumber = (num) => {
     }
 }
 isPositiveNumber()
+
+ */
 ```
 ```js
-let num;
-let isPositiveNumber = num > 0 ?
-    () => console.log(true):
-    () => console.log(false);
-isPositiveNumber();
+let isPositiveNumber = num => num > 0 || num < 0;
+isPositiveNumber()
 ```
-
 
 
 
