--- a/questions/1.md
+++ b/questions/1.md
@@ -680,11 +680,12 @@ function someFunction (arg = '') {
 > - [Функции-стрелки, основы](https://learn.javascript.ru/arrow-functions-basics)
 ### Пример кода
 ```js
-function someFunction (arg = '') {
-  if(!arg) {
-    return;
-  }
-  console.log('Hello World');
+function isPositiveNumber (num) {
+    if (num > 0) {
+        return true;
+    } else {
+        return false;
+    }
 }
 ```
 #### Дайте ответ на вопрос или выполните задание
