--- a/answers/1.md
+++ b/answers/1.md
@@ -393,8 +393,10 @@ getElements(count);
 ```
 ```js
 function getElements(count) {
-  return [1,2,3,4,5,6,7].slice(0, count)
+  return [0,1,2,3,4,5,6,7,8,9,10,11].slice(0, count)
 }
+
+getElements(1/0);
 ```
 ## Задача 43
 ```
@@ -403,21 +405,10 @@ function getElements(count) {
 3. Если деление невозможно (например 0 деленный на 0), возвращать 0
 ```
 ```js
-function getSum(year, month) {
-    return (message = year / month || 0);
+function getDate(day, month) {
+    return (day / month || 0);
 }
-getSum(2022, 12);
-```
-```js
-
-function getSum(year, month) {
-    if (message = year / month) {
-        return message;
-    } else
-        return 0;
-    }
-
-getSum(2022, 12);
+getDate(365, 12);
 ```
 ## Задача 44
 ```
@@ -429,32 +420,27 @@ getSum(2022, 12);
 6. Для всего остального - возвращать строку "else"
 ```
 ```js
-function getType() {
-    let num = Number;
-    switch (num) {
-        case Number:
-        case BigInt:
+function getType(num) {
+    switch(typeof num) {
+        case 'number':
+        case 'bigInt':
             return 'number';
-            break;
 
-        case Boolean:
-            return num;
-            break;
+        case 'boolean':
+            return (num === true ? 'true' : num === false ? 'false' : '');
 
-        case String:
+        case 'string':
             return 'string';
-            break;
-
+            
+            // case 'object':
         case null:
             return 'null';
-            break;
 
         default:
             return 'else';
-            break;
     }
 }
-getType();
+getType(5 > 6); 
 ```
 ## Задача 45
 ```js
