--- a/answers/1.md
+++ b/answers/1.md
@@ -421,26 +421,25 @@ getDate(365, 12);
 ```
 ```js
 function getType(num) {
-    switch(typeof num) {
-        case 'number':
-        case 'bigInt':
+    switch(true) {
+        case num === Number(num):
+        case num === BigInt(num):
             return 'number';
 
-        case 'boolean':
-            return (num === true ? 'true' : num === false ? 'false' : '');
+        case num === Boolean(num):
+            return String(num);
 
-        case 'string':
+        case num === String(num):
             return 'string';
             
-            // case 'object':
-        case null:
-            return 'null';
+        case num === null:
+            return String(num);
 
         default:
             return 'else';
     }
 }
-getType(5 > 6); 
+getType();
 ```
 ## Задача 45
 ```js
