--- a/answers/2.md
+++ b/answers/2.md
@@ -114,7 +114,7 @@ const obj = {
 }
 obj[undefined] === obj['undefined']
 
-// Будут равны. В объекте ключ заключённый в кавычки нужен для разделённых имён или спец. символов.
+// Будут равны. Нет никаких ограничений к именам свойств, могут быть в кавычках и без, они могут быть в виде строк или символов
 ```
 ## Задача 2.10
 ```js
