--- a/answers/2.md
+++ b/answers/2.md
@@ -119,21 +119,23 @@ obj[undefined] === obj['undefined']
 ## Задача 2.10
 ```js
 let salaries = {
-  John: 100,
-  Ann: 160,
-  Pete: 130,
+    John: 100,
+    Ann: 160,
+    Pete: 130,
 };
 
 let sum = 0;
 for (let key in salaries) {
     sum += salaries[key];
 }
+let numObject = 0;
+for (let key in salaries) {
+    numObject++;
+}
 
-let midSalaries = sum / 3;
+let midSalaries = sum / numObject;
 console.log(midSalaries);
 ```
-
-
 
 
 
