descriptive commit message

--- a/answers/1.md
+++ b/answers/1.md
@@ -353,21 +353,30 @@ calcSum(num);
 
  */
 ```
-```js
+/*
 function getData(num) {
     if (num % 2) {
-        return;
+        return true;
     }
 }
 const num = 10;
-calcSum(num);
+getData(num);
 
 / Или
 
 function getData(num) { return num % 2 };
 const num = 10;
-calcSum(num);
-
+getData(num);
+*/
+```js
+function getReturnNumber(num) {
+    if (num % 2) {
+        return true;
+    } else {
+        return false;
+    }
+}
+getData(9);
 ```
 ## Задача 42
 ```
@@ -396,7 +405,7 @@ function getElements(count) {
   return [0,1,2,3,4,5,6,7,8,9,10,11].slice(0, count)
 }
 
-getElements(1/0);
+getElements(Infinity);
 ```
 ## Задача 43
 ```
@@ -405,10 +414,10 @@ getElements(1/0);
 3. Если деление невозможно (например 0 деленный на 0), возвращать 0
 ```
 ```js
-function getDate(day, month) {
-    return (day / month || 0);
+function getDividingFruit(pears, apple) {
+    return (pears / apple || 0);
 }
-getDate(365, 12);
+getDividingFruit(120, 6);
 ```
 ## Задача 44
 ```
@@ -419,8 +428,9 @@ getDate(365, 12);
 5. Если тип null - возвращать сроку "null"
 6. Для всего остального - возвращать строку "else"
 ```
-```js
+/*
 function getType(num) {
+    let type = typeof num;
     switch(true) {
         case num === Number(num):
         case num === BigInt(num):
@@ -440,6 +450,52 @@ function getType(num) {
     }
 }
 getType();
+*/
+```js
+function getType(num) {
+    // let type = typeof num;
+    switch(true) {
+        case num === null:
+            return String(num);
+
+        case num === String(num):
+            return 'string';
+
+        case num === Boolean(num):
+            return String(num);
+
+        case num === Number(num):
+        case num === BigInt(num):
+            return 'number';
+            
+        default:
+            return 'else';
+    }
+}
+getType(6);
+```
+```js
+function getType(num) {
+    let type = typeof num;
+    switch(true) {
+        case type === null:
+            return 'null';
+
+        case type === 'string':
+            return 'string';
+
+        case type === 'boolean':
+            return 'string';
+
+        case type === 'number':
+        case num === 'bigint':
+            return 'number';
+            
+        default:
+            return 'else';
+    }
+}
+getType(null);
 ```
 ## Задача 45
 ```js
@@ -477,7 +533,7 @@ isPositiveNumber()
  */
 ```
 ```js
-let isPositiveNumber = num => num > 0 || num < 0;
+let isPositiveNumber = num => num < 0 || num > 0;
 isPositiveNumber()
 ```
 
