--- a/answers/2.md
+++ b/answers/2.md
@@ -29,7 +29,7 @@ const obj = {
     b: 3
   }
 };
-obj.c = 4;
+obj.a.c = 4;
 
 console.log(obj)
 ```
@@ -53,7 +53,7 @@ const obj = {
 }
 
 for (let key in obj) {
-    console.log(obj[key]);
+    console.log(key);
 }
 ```
 ## Задача 2.6
@@ -78,12 +78,9 @@ for (let key in obj) {
 Функция должна возвражать булевое значение
 ```
 ```js
-function checkKey() {
-    const obj = {
-        name: 'Igor'
-    };
-    console.log(typeof 'name' in obj);
-}
+function checkKey(obj, key) {
+    return key in checkKey;
+};
 checkKey();
 ```
 ## Задача 2.8
@@ -136,9 +133,38 @@ for (let key in salaries) {
 let midSalaries = sum / numObject;
 console.log(midSalaries);
 ```
+## Задача 2.11
+```
+Переменные firstUser и secondUser не будут равны так как это не один и тот же объект.
+```
+## Задача 2.12
+```
+Переменные secondUser и firstUser будут равны так как ссылаются на один и тот же объект.
+```
+## Задача 2.13
+```js
+"secondUser.firstName" будет равен 'Bob', мы меняем содержимое константы.
+```
+## Задача 2.14
+```
+1. Какие значения будут в "firstUser.profile" и "secondUser.profile", если мы выполним следующий код?
+2. Будут ли значения firstUser.profile, secondUser.profile и profile равны?
+3. Почему?
+```
+```js
+const firstUser = {
+  firstName: 'John',
+  profile: {
+    age: 25,
+  },
+};
+const secondUser = firstUser;
+const profile = secondUser.profile;
+profile.height = 180;
+```
+```
 
-
-
+```
 
 
 
