--- a/answers/1.md
+++ b/answers/1.md
@@ -533,8 +533,8 @@ isPositiveNumber()
  */
 ```
 ```js
-let isPositiveNumber = num => num < 0 || num > 0;
-isPositiveNumber()
+let isPositiveNumber = num => num > 0 || false;
+isPositiveNumber();
 ```
 
 
