--- a/answers/2.md
+++ b/answers/2.md
@@ -142,8 +142,8 @@ console.log(midSalaries);
 Переменные secondUser и firstUser будут равны так как ссылаются на один и тот же объект.
 ```
 ## Задача 2.13
-```js
-"secondUser.firstName" будет равен 'Bob', мы меняем содержимое константы.
+```
+"secondUser.firstName" будет равен 'Bob', меняется содержимое константы.
 ```
 ## Задача 2.14
 ```
@@ -163,13 +163,127 @@ const profile = secondUser.profile;
 profile.height = 180;
 ```
 ```
+Значения "firstUser.profile" и "secondUser.profile" будет:
+
+  profile:{
+    age: 25,
+    height = 180
+  },
+  
+2. Будут равны так как ссылаются на один и тот же объект.
+```
+## Задача 2.15
+```
+1. Чему будет равен "firstUser.profile" и "secondUser.profile", если мы выполним следующий код?
+2. Почему?
+```
+```js
+const firstUser = {
+    firstName: 'John',
+    profile: {
+        age: 25,
+    },
+};
+const secondUser = firstUser;
+let profile = secondUser.profile;
+profile = {};
+```
+```
+1. Значение в "firstUser.profile" и "secondUser.profile будут равны "age: 25".
+2. В "const secondUser" мы копируем обект по ссылке "firstUser",
+а в "const profile" мы копируем значение по ссылке из firstUser.profile.
+"profile = {};" присваиваем пустой объет лишь глобальной переменной "profile".
 
 ```
+## Задача 2.16
+```
+1. Какие значения будут в "age", "firstUser.profile.age" и "secondUser.profile.age", если мы выполним следующий код?
+2. Будут ли "age", "firstUser.profile.age" и "secondUser.profile.age" равны?
+3. Почему?
+```
+```js
+const firstUser = {
+    firstName: 'John',
+    profile: {
+        age: 25,
+    },
+};
+const secondUser = firstUser;
+let age = secondUser.profile.age;
+age = 30;
+```
+```
+1. Значение в "age" будет равно "30", а в "firstUser.profile.age" и "secondUser.profile.age" будут равны "25".
+2. Значения будут разные
+3. "secondUser" мы присваиваем ссылку на объект "firstUser", в "age" мы присваиваем значение ключа по ссылке secondUser.profile.age,
+а потом в переменной "age" меняем его на "30".
+```
+## Задача 2.17
+```
+Напишите код, который позолит вывести в консоль 2 сообщения
+1. console.log(emptyName) -> 'empty'
+2. console.log(firstName) -> 'Mike'
+```
+```js
+let user = {
+    getFirstName(name = 'empty') {
+        return name;
+    }
+}
 
+const emptyName = user.getFirstName();
+const firstName = user.getFirstName('Mike');
+console.log(emptyName);
+console.log(firstName);
+```
+## Задача 2.18
+```
+Дополните объект 'user', чтобы вывести в консоль имя и фамилию
+console.log(fullName) -> 'John Smith'
+```
+```js
+const user = {
+    firstName: 'John',
+    lastName: 'Smith',
+    getFullName() {
+        return (`${this.firstName} ${this.lastName}`);
+    }
+};
 
+const fullName = user.getFullName();
+console.log(fullName);
+```
+## Задача 2.19
+```
+Дополните объект 'user', чтобы вывести в консоль имя
+1. console.log(name) -> 'John'
+```
+```js
+const user = {
+    name: 'John',
+    
+    user() {
+        return this.name;
+    }
+};
+const name = user.user().user().user().user().user().user().name;
+console.log(name);
+```
+## Задача 2.20
+```
+Напишите код, который позолит вывести в консоль 2 сообщения
+1. console.log(emptyName) -> 'empty'
+2. console.log(firstName) -> 'Mike'
+```
+```js
+const userWithName = new User('Mike');
+const firstName = userWithName.getFirstName();
+console.log(firstName);
 
-
-
+const userWithoutName = new User();
+const emptyName = userWithoutName.getFirstName();
+console.log(emptyName);
+```
 
 
 
