--- a/questions/2.md
+++ b/questions/2.md
@@ -246,13 +246,13 @@ profile.height = 180;
 ```
 ```js
 const firstUser = {
-  firstName: 'John',
-  profile: {
-    age: 25,
-  },
+    firstName: 'John',
+    profile: {
+        age: 25,
+    },
 };
 const secondUser = firstUser;
-const profile = secondUser.profile;
+let profile = secondUser.profile;
 profile = {};
 ```
 
@@ -268,13 +268,13 @@ profile = {};
 ```
 ```js
 const firstUser = {
-  firstName: 'John',
-  profile: {
-    age: 25,
-  },
+    firstName: 'John',
+    profile: {
+        age: 25,
+    },
 };
 const secondUser = firstUser;
-const age = secondUser.profile.age;
+let age = secondUser.profile.age;
 age = 30;
 ```
 
@@ -304,8 +304,8 @@ console.log(fullName) -> 'John Smith'
 ```
 ```js
 const user = {
-  firstName: 'John',
-  lastName: 'Smith',
+    firstName: 'John',
+    lastName: 'Smith',
 };
 
 const fullName = user.getFullName();
@@ -322,7 +322,7 @@ console.log(fullName);
 ```
 ```js
 const user = {
-  name: 'John',
+    name: 'John',
 }
 const name = user.user().user().user().user().user().user().name;
 console.log(name);
