--- a/answers/2.md
+++ b/answers/2.md
@@ -78,8 +78,11 @@ for (let key in obj) {
 Функция должна возвражать булевое значение
 ```
 ```js
-function checkKey(obj, key) {
-    return key in checkKey;
+function checkKey() {
+    let user = {
+        age: 18,
+    };
+    console.log('age' in user);
 };
 checkKey();
 ```
@@ -263,7 +266,7 @@ const user = {
     name: 'John',
     
     user() {
-        return this.name;
+        return this;
     }
 };
 const name = user.user().user().user().user().user().user().name;
@@ -276,6 +279,12 @@ console.log(name);
 2. console.log(firstName) -> 'Mike'
 ```
 ```js
+let user = {
+    getFirstName(name = 'empty') {
+        this.name = name;
+    }
+};
+
 const userWithName = new User('Mike');
 const firstName = userWithName.getFirstName();
 console.log(firstName);
@@ -284,8 +293,18 @@ const userWithoutName = new User();
 const emptyName = userWithoutName.getFirstName();
 console.log(emptyName);
 ```
+```js
+let user = {
+    getFirstName(name = 'empty') {
+        return name;
+    }
+}
 
-
+const emptyName = user.getFirstName();
+const firstName = user.getFirstName('Mike');
+console.log(emptyName);
+console.log(firstName);
+```
 
 
 
