--- a/answers/2.md
+++ b/answers/2.md
@@ -279,9 +279,9 @@ console.log(name);
 2. console.log(firstName) -> 'Mike'
 ```
 ```js
-let user = {
-    getFirstName(name = 'empty') {
-        this.name = name;
+function User(name = 'empty') {
+    this.getFirstName = function () {
+        return name;
     }
 };
 
@@ -293,11 +293,56 @@ const userWithoutName = new User();
 const emptyName = userWithoutName.getFirstName();
 console.log(emptyName);
 ```
+## Задача 2.21
+```
+Переделайте объект 'user' в функцию конструктор и дополните её, чтобы вывести в консоль имя и фамилию
+console.log(fullName) -> 'John Smith'
+```
+```js
+function User() {
+    this.firstName = 'John';
+    this.lastName = 'Smith';
+    this.getFullName = function () {
+        return `${this.firstName}  ${this.lastName}`
+    }
+};
 
+const user = new User();
+const fullName = user.getFullName();
+console.log(fullName);
+```
+## Задача 2.22
+```
+Переделайте объект 'user' в функцию конструктор и дополните её, чтобы вывести в консоль имя
+1. console.log(name) -> 'John'
+```
+```js
+function User() {
+    this.name = 'John';
+    this.user = function (){
+        return this;
+    }
+};
 
+const user = new User();
+const name = user.user().user().user().user().user().user().name;
+console.log(name);
+```
+## Задача 2.23
+```
+Исправьте ошибку, не изменяя объекта user
+```
+```js
+const user = {
+  firstName: 'John',
+  profile: {
+    age: 25,
+  },
+};
 
-
-
+const height = user.profile.height?.();
+console.log(height);
+```
 
 
 
