--- a/answers/3.md
+++ b/answers/3.md
@@ -22,7 +22,7 @@ console.log(isFinite(value));
 ```js
 let num = '10.3';
 let value = parseInt(num)
-console.log( Math.floor(+num) );
+console.log( Math.floor(num) );
 ```
 ## Задача 4
 ```js
