--- a/answers/3.md
+++ b/answers/3.md
@@ -21,7 +21,7 @@ console.log(isFinite(value));
 ```
 ```js
 let num = '10.3';
-let value = parseInt(num)
+let value = +num;
 console.log( Math.floor(num) );
 ```
 ## Задача 4
