--- a/answers/3.md
+++ b/answers/3.md
@@ -25,14 +25,200 @@ let value = +num;
 console.log( Math.floor(num) );
 ```
 ## Задача 4
-```js
-
 ```
+Напишите код, который преобразует число 10.36 в строку '10.3'
+```
+```js 
+let num = 10.36;
+let numTwo = num.toString();
+console.log( parseInt(num * 10) / 10 );
+```
+## Задача 5
+```
+Напишите функцию, которая будет имитировать бросание монетки.
+Какждый раз при ее вызове, функция должна возвращать 'орел' или 'решка'
+Вероятность выпадения решки должена быть 30%
+Вероятность выпадения орла должена быть 70%
 
+Дополнительно напишите код, который будет имитировать подбрасывание монетки 1000 раз,
+используя ранее написанную функцию и в конце выводить процент выпадения орла и решки
+```
+```js
+/*
+function coinFlip() {
+    const COIN = ['орел', 'решка'];
+    let coinRandom = Math.floor(Math.random(COIN) * COIN.length);
+    console.log(coinRandom, COIN[coinRandom]);
+}
+coinFlip();
+*/
+```
+```js
+function coinFlip() {
+    
+const COIN = Math.floor(Math.random() * 100);
+    if (COIN <= 30) {
+        console.log('решка', COIN + '%')
+    } else {
+        console.log('орёл', COIN + '%')
+    }
+}
 
+ for (i = 1; i <= 1000; i++) {
+     coinFlip()
+}
+// НЕ ДОДЕЛАЛ 
+```
+## Задача 6
+```
+Чем отличаются одинарные, двойные и обратные кавычки?
+```
+```
+одинарные и двойные кавычко работают одинаково,
+а обратные кавычки дают возможность вставлять многострочный текст и выражения
+```
+## Задача 7
+```
+Напишите функцию, которая вернет все знаки после запятой
+Например, если передать число 100.4567 функция должна вернуть 4567
+```
+```js
+function returnValueAfterDot() {
+    let num = 1000.4567;
+    let value = num.toString();
+    console.log(value.substring(value.indexOf('.') +1))
+}
+returnValueAfterDot()
+```
+## Задача 8
+```
+Если в массиве 3 елемента. Какой индекс будет у первого и последнего елемента?
+```
+```js
+const fruit = ['Apple', 'Orange', 'Plum'];
+console.log(fruit.indexOf());
+```
+```
+у первого - 0, у последнего 2.
+```
+## Задача 9
+```
+Выведите значение последнего елемента массива
+```
+```js
+const fruit = ['Apple', 'Orange', 'Plum'];
+console.log( fruit[fruit.length -1] );
+```
+## Задача 10
+```
+Добавьте в конец массива 'fruit' еще один фрукт 'PINEAPPLE'
+```
+```js
+const PINEAPPLE = 'Pineapple';
+const fruit = ['Apple', 'Orange', 'Plum'];
+fruit.push(PINEAPPLE);
+// fruit[fruit.length] = PINEAPPLE;
 
+console.log(fruit);
+```
+## Задача 11
+```
+Добавьте в начало массива 'fruit' еще один фрукт 'PINEAPPLE'
+```
+```js
+const PINEAPPLE = 'Pineapple';
+const fruit = ['Apple', 'Orange', 'Plum'];
+fruit.unshift(PINEAPPLE);
 
+console.log(fruit);
+```
+## Задача 12
+```
+Удалите 'Plum' с массива
+```
+```js
+const fruit = ['Apple', 'Orange', 'Plum'];
+fruit.pop();
 
+console.log(fruit);
+// не понял как удалить не последний элемент, а определённый.
+```
+## Задача 13
+```
+Удалите 'Apple' с массива
+```
+```js
+const fruit = ['Apple', 'Orange', 'Plum'];
+fruit.shift();
+
+console.log(fruit);
+```
+## Задача 14
+```
+Выведите все елементы массива в консоль в верхнем регистре
+```
+```js
+const fruit = ['Apple', 'Orange', 'Plum'];
+
+for (let up of fruit) {
+    console.log(up.toUpperCase());
+}
+```
+## Задача 15
+```
+Создайте новую переменную `otherFruits` и скопируйте массив 'fruit' по значению, а не по ссылке
+Выражение fruit.push('Pineapple') не должно изменять `otherFruits`
+```
+```js
+const fruit = ['Apple', 'Orange', 'Plum'];
+const otherFruits = fruit.concat();
+
+fruit.push('Pineapple');
+
+console.log(fruit);
+console.log(otherFruits);
+```
+## Задача 16
+```
+В каких случаях нужно применять методы массива 'forEach', 'filter', 'map'?
+```
+```
+'forEach' - применяется для перебора массива, можно применить колбэк функцию для каждого элементам
+
+'filter' - позволяет получить новый массив, отфильтровав элементы с помощью переданной колбэк функции
+
+'map' - позволяет получить новый массив, где каждый элемент является результатом колбэка функции.
+```
+## Задача 17
+```
+Выведите все елементы массива в консоль в верхнем регистре
+
+Используйте методы массива для перебора
+```
+```js
+const fruit = ['Apple', 'Orange', 'Plum'];
+fruit.forEach(element=>{
+console.log(element.toUpperCase());
+})
+```
+## Задача 18
+```
+Подумайте, как можно избежать повторений в условии (fruit === 'Apple' || fruit === 'Orange' || fruit === 'Plum')
+
+Создайте функцию, которая принимает один аргумент 'fruit' в виде строки
+Если аргумент равен 'Apple', 'Orange', 'Plum' или 'Pineapple' - выводить значение аргумента в консоль
+Во всех остальных случаях выводить 'null'
+```
+```js
+function notIterationFruit(fruit) {
+    fruit = 'Apple';
+    const fruits = ['Apple', 'Orange', 'Plum', 'Pineapple'];
+    console.log(fruits.includes(fruit) ? fruit : null);
+    
+}
+notIterationFruit()
+```
+## Задача 18
 
 
 
